# sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  LICENSE  PROJECT_DESCRIPTION.md  README.md  USAGE.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
sample_app/: app.py
scenarios/: api_latency_infra.json  checkout_500.json
src/sentinel/: __init__.py  config.py  llm.py  maf_workflow.py  main.py  mcp_client.py  models.py  orchestrator.py  tools.py  tracing.py
src/sentinel/agents/: __init__.py  critic.py  investigators.py  planner.py  postmortem.py  synthesizer.py
tests/: test_pipeline.py
